<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/materials_code"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/materials_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="请选择"
            android:text=""
            android:clickable="true"
            android:onClick="queryMaterialsClick"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/right_arrows1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingTop="6dp"
            android:clickable="true"
            android:onClick="queryMaterialsClick"
            android:src="@drawable/right_arrows" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/equipment_code"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/equipment_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:clickable="true"
            android:hint="请选择"
            android:text=""
            android:onClick="queryDeviceClick"/>
        <ImageView
            android:id="@+id/right_arrows2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingTop="6dp"
            android:clickable="true"
            android:onClick="queryDeviceClick"
            android:src="@drawable/right_arrows" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/ver_code"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ver_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:clickable="true"
            android:onClick="queryVerClick"
            android:text=""
            android:hint="请选择" />
        <ImageView
            android:id="@+id/right_arrows3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingTop="6dp"
            android:clickable="true"
            android:onClick="queryVerClick"
            android:src="@drawable/right_arrows" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scann_number"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/task_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="18sp"
            android:text="" />

       <!-- <Button
            android:id="@+id/creat_task"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/bt_shape2"
            android:gravity="center"
            android:text="创建扫码单"
            android:textColor="@color/encode_view"
            android:textSize="14sp" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp">
        <EditText
            android:id="@+id/task_number_2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="关联任务单号(选填)"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/update_task"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/bt_shape"
            android:gravity="center"
            android:text="关联"
            android:textColor="@color/encode_view"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/scan_result"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scann_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text=""
            android:onClick="queryMaterialsClick"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>