<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity"
    android:background="@mipmap/login_back"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/update_app"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:text="更新"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/setting_device"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="220dp"
            android:scaleType="fitEnd"
            app:srcCompat="@android:drawable/ic_menu_preferences" />

    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="130dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:src="@mipmap/login_scan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/scan_app"/>
    </LinearLayout>-->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="#605d5d"
                    android:textColor="#605d5d"
                    android:background="@drawable/login_input_shape"
                    android:singleLine="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/email"
                    android:layout_alignTop="@id/email"
                    android:layout_alignBottom="@id/email"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/login_user"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/prompt_password"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#605d5d"
                    android:background="@drawable/login_input_shape"
                    android:textColor="#605d5d"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/password"
                    android:layout_alignTop="@id/password"
                    android:layout_alignBottom="@id/password"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/login_lock"/>
            </RelativeLayout>


       <!--     <Button
                android:id="@+id/login_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="loginClick"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />-->

            <LinearLayout
                android:id="@+id/if_save_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <!--<ImageView-->
                    <!--android:layout_marginTop="2dp"-->
                    <!--android:layout_marginLeft="14dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:clickable="true"-->
                    <!--android:src="@drawable/save_pwd"/>-->
                <CheckBox
                    android:id="@+id/checkbox_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/save_pwd"
                    android:textColor="#DEB019"/>
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:onClick="loginClick"
                android:text="@string/action_sign_in"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/login_bt_shape"   />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="120dp"
                android:textSize="10sp"
                android:textColor="#c4c1c1"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>